# sys-compare

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  workflow.toml
src/: comparemode.rs  createmode.rs  localmode.rs  main.rs  options.rs  syscompare.rs
