[package]
name = "sys-compare"
version = "0.1.1"
edition = "2021"
authors = ["james@koonts.net"]
license = "MIT"
repository = "https://github.com/helloimalemur/sys-compare"
keywords = ["file-integrity", "filesystem-integirty", "file-hashing", "folder-hashing", "filesystem-hashing"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Fasching = "0.1.19"
clap = { version = "4.5.4", features = ["derive"] }
whoami = "1.5.1"
