[package]
name = "sys-compare"
description = "Track Filesystem Integrity via 'Snapshots' which contain a HashMap of the files and their corresponding hash signature from a specified directory."
version = "0.2.4"
edition = "2021"
authors = ["james@koonts.net"]
license = "MIT"
repository = "https://github.com/helloimalemur/sys-compare"
keywords = ["file-integrity", "filesystem-integirty", "file-hashing", "folder-hashing", "filesystem-hashing"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filesystem-hashing = "0.3.4"
clap = { version = "4.5.4", features = ["derive"] }
whoami = "1.5.1"
anyhow = "1.0.82"
